backend/test_pass_log.txt

> backend@1.0.0 test
> node --experimental-vm-modules node_modules/jest-cli/bin/jest.js --runInBand

(node:20492) ExperimentalWarning: VM Modules is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
PASS tests/driverTrips.test.js (17.444 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/conditionalPersistence.test.js (16.915 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/dashboard.test.js (14.799 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/roster.test.js (13.733 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/relay.test.js (10.544 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

    console.log
      [socket] driver joined room trip:f32aaf53-27d3-413a-92aa-148abf3fccce (Socket: ApO6UVGn8nXxyeIhAAAB)

      at Namespace.log (socket/io.js:43:17)

    console.warn
      [socket] Auth failed for driver on trip 99999999-9999-9999-9999-999999999999: No session key

    [0m [90m 34 |[39m
     [90m 35 |[39m         [36mif[39m ([33m![39msessionData) {
    [31m[1m>[22m[39m[90m 36 |[39m             console[33m.[39mwarn([32m`[socket] Auth failed for ${role} on trip ${tripId}: No session key`[39m)[33m;[39m
     [90m    |[39m                     [31m[1m^[22m[39m
     [90m 37 |[39m             socket[33m.[39memit([32m'auth_error'[39m[33m,[39m [32m'No active session for this trip'[39m)[33m;[39m
     [90m 38 |[39m             [36mreturn[39m socket[33m.[39mdisconnect([36mtrue[39m)[33m;[39m
     [90m 39 |[39m         }[0m

      at Namespace.warn (socket/io.js:36:21)

    console.log
      [socket] client joined room trip:f32aaf53-27d3-413a-92aa-148abf3fccce (Socket: 2st0lqI17Iq0pSkNAAAF)

      at Namespace.log (socket/io.js:43:17)

    console.log
      [socket] driver disconnected from room trip:f32aaf53-27d3-413a-92aa-148abf3fccce (Socket: ApO6UVGn8nXxyeIhAAAB)

      at Socket.log (socket/io.js:85:21)
          at Map.forEach (<anonymous>)
          at Array.map (<anonymous>)

    console.log
      [socket] client disconnected from room trip:f32aaf53-27d3-413a-92aa-148abf3fccce (Socket: 2st0lqI17Iq0pSkNAAAF)

      at Socket.log (socket/io.js:85:21)
          at Map.forEach (<anonymous>)
          at Array.map (<anonymous>)

PASS tests/trips.test.js (13.041 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/complaints.test.js (11.903 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/investigation.test.js (8.451 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/bookings.test.js (7.17 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/driverAuth.test.js (7.06 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

PASS tests/auth.test.js (5.486 s)
  â—Ź Console

    console.log
      [db] PostgreSQL connected

      at log (config/db.js:13:13)

    console.log
      [redis] Redis connected

      at Class.log (config/redis.js:6:36)

FAIL tests/privacyDashboard.test.js
  â—Ź Test suite failed to run

    SyntaxError: The requested module '../server.js' does not provide an export named 'app'

      at Runtime.linkAndEvaluateModule (node_modules/jest-runtime/build/index.js:684:5)

Test Suites: 1 failed, 11 passed, 12 total
Tests:       61 passed, 61 total
Snapshots:   0 total
Time:        127.399 s, estimated 131 s
Ran all test suites.
